# code_mate

./: .gitignore  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md
docs/: protocol.md
firmware/: README.md  TOOLCHAIN.md  partitions_release.csv  platformio.ini
firmware/include/: app_types.h  board_config.h  lv_conf.h
firmware/src/: input.cpp  input.h  layout.h  leds.cpp  leds.h  main.cpp  protocol.cpp  protocol.h  ui_cc_usage.cpp  ui_cc_usage.h  ui_common.cpp  ui_common.h  ui_loading.cpp  ui_loading.h  ui_modesel.cpp  ui_modesel.h  ui_system.cpp  ui_system.h  ui_text_scroll.cpp  ui_text_scroll.h  ui_udisk.cpp  ui_udisk.h  usb_disk.cpp  usb_disk.h
pcrs/: Cargo.toml  build.rs
pcrs/.cargo/: config.toml
pcrs/src/: autostart.rs  cc_registry.rs  cc_source.rs  codex_source.rs  config.rs  datasource.rs  events.rs  hooks.rs  host.rs  installer.rs  instance_select.rs  lid_watch.rs  log.rs  main.rs  netinfo.rs  self_install.rs  serial_link.rs  sessions.rs  sys_source.rs  sysmon.rs  transcript.rs  ui.rs  ui_theme.rs  util.rs
pcrs/ui/: app.js  index.html  style.css
